# SIMS

./: .gitignore  pyproject.toml
scripts/: example.py
scsims/: data.py  model.py
tests/: test_data.py  test_model.py
